[package]
name = "atlas_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.11", features = ["serde"] }
image = { version = "0.25.0", default-features = false, features = ["png"] }
macroquad = "0.4.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[profile.dev.package.'*']
opt-level = 3
